change styling, add pictures to specialties, fix facebook preview

--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -4,16 +4,16 @@ permalink: /contact/
 ---
 <div class="container contact">
 
-  <div class="row justify-content-center">
+  <div class="row justify-content-center map">
 
-    <div class="col-lg-6 col-md-6 col-sm-12 form">
+    <div class="col-lg-6 col-md-6 col-sm-12">
       <h3 class="page-header-2">
         Schedule a Free Consultation
       </h3>
     {% include form.html %}
     </div>
 
-    <div class="col-lg-6 col-md-6 col-sm-12 map">
+    <div class="col-lg-6 col-md-6 col-sm-12">
       <h3 class="page-header-2">
         Our Location
       </h3>
