--- a/_pages/kate-blemler.html
+++ b/_pages/kate-blemler.html
@@ -11,10 +11,10 @@ permalink: /kate-blemler/
     <div class="col-lg-4 col-md-4 col-sm-12">
       <img src="/assets/img/Kate 8X10_website.jpg" alt="Kate Blemler" class="img-fluid headshot">
       <div class="col caption-btn">
-          <button class="mdc-button mdc-button--raised"><span class="mdc-button__ripple"></span>Contact</button>
+            <a href="mailto:kate@rottenbergtherapy.com?subject=Schedule%20Appointment:%20Mail%20From%20rottenbergtherapy.com"><button id="learn-more" class="my-ripple-button mdc-button mdc-card__action mdc-card__action--button">Schedule</button></a>
       </div>
     </div>
-    <div class="col-lg-8 col-md-8 col-sm-12 info-about">
+    <div class="col-lg-8 col-md-8 col-sm-12 info">
       <p>
       I earned an MSEd in Mental Health Counseling from Fordham University and have experience working in private practice as well as nonprofit mental health agencies. I primarily see clients for individual sessions; additionally, I run process groups and see clients for couples and family sessions.
     </p>
@@ -29,7 +29,8 @@ permalink: /kate-blemler/
     </p>
     <p>
     I primarily work with young adults struggling with depression, anxiety, trauma, sexuality, and identity, and I work with many folks who identify as LGBTQAI. In addition to seeing individuals, I work with couples and families regarding adjustment issues and interpersonal conflicts, including relational difficulties and parenting concerns. I also offer group therapy services, which will typically meet weekly on Saturdays.
-    <a href="{% link _pages/about.html %}"><span class="back">Who We Are</span></a>
+    <br/>
+  <a href="{% link _pages/about.html %}"><span class="back"><i class="fas fa-arrow-left"></i></span></a>
     </p>
 
     </div>
