--- a/_pages/alana-devine-dunn.html
+++ b/_pages/alana-devine-dunn.html
@@ -11,10 +11,10 @@ permalink: /alana-devine-dunn/
     <div class="col-lg-4 col-md-4 col-sm-12">
       <img src="/assets/img/Alana 8X10_website.jpg" alt="Alana" class="img-fluid headshot">
       <div class="col caption-btn">
-          <button class="mdc-button mdc-button--raised"><span class="mdc-button__ripple"></span>Contact</button>
+          <a href="mailto:alana@rottenbergtherapy.com?subject=Schedule%20Appointment:%20Mail%20From%20rottenbergtherapy.com"><button id="learn-more" class="my-ripple-button mdc-button mdc-card__action mdc-card__action--button">Schedule</button></a>
       </div>
     </div>
-<div class="col-lg-8 col-md-8 col-sm-12 info-about">
+<div class="col-lg-8 col-md-8 col-sm-12 info">
     <p>
       I work with individuals experiencing depression, anxiety, OCD, career, life-role, and relationship transitions as well as those seeking emotional support in dealing with medical diagnoses, loss, and trauma. I work with patients to uncover and address their core beliefs, emotions, behaviors, and thoughts. This gives patients not only the tools to cope with difficult situations, but also agency in their lives and the opportunity to thrive.
     </p>
@@ -31,7 +31,8 @@ permalink: /alana-devine-dunn/
     I work utilizing an integrative approach, incorporating techniques from cognitive behavioral therapy, acceptance and commitment therapy, dialectical behavior therapy, mindfulness-based approaches, and psychodynamic psychotherapy, based your individualized needs and goals.
     </p>
 <p>I look forward to meeting you and to our work together.
-<a href="{% link _pages/about.html %}"><span class="back">Who We Are</span></a></p>
+  <br/>
+<a href="{% link _pages/about.html %}"><span class="back"><i class="fas fa-arrow-left"></i></span></a></p>
 </div>
   </div>
   </div>
