--- a/_pages/services.html
+++ b/_pages/services.html
@@ -52,7 +52,7 @@ permalink: /services/
       </div>
       <div class="col-lg-6 col-md-8 col-sm-12 order-lg-first">
       <h3 class="page-header-2">Group Counseling</h3>
-      <p class="info">The special set of challenges that comes with romantic relationships are addressed bringing to light patterns of communications, and needs that are asked to be met.</p>
+      <p class="info">Working in a group with others can be supportive, invigorating, and be a space for seeing and experiencing that others are challenged in similar, yet different ways. Contact us for current group offerings.</p>
     </div>
 
     </div>
