add graphic to contact and main page

--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -18,6 +18,11 @@ permalink: /contact/
         Our Location
       </h3>
       <iframe class="mw-250" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJM7QM169ZwokR_40cJDZaujk&key=AIzaSyC_qKIJdHDv_xY19WxvOJ4cORwC74kbRKM" allowfullscreen></iframe>
+      <h4 class="page-header-2">
+        Listed On:
+      </h4>
+      <a href="http://www.mywellbeing.com"><img src="/assets/img/wellbeing.gif" alt="wellbeing"></a>
+
     </div>
 
   </div>
