--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ layout: default
         </div>
         <div class="divider-2 col-lg-6 col-md-6 col-sm-12 text-center">
           <h2>Contact one of our professionals today:</h2><br/>
-          <div class="col-12 text-left contact">
+          <div class="text-left contact">
             <p>
               <a href="{% link _pages/contact.html %}">
                 <i class="fas fa-envelope"></i>
@@ -71,6 +71,9 @@ layout: default
           <a href="{% link _pages/contact.html %}">
             <button class="mdc-button mdc-button--raised">Schedule a Free Consultation</button>
           </a>
+
+          <p class="text-left contact">Listed On:</p>
+          <a href="http://www.mywellbeing.com"><img src="/assets/img/wellbeing.gif" alt="wellbeing"></a>
         </div>
       </div>
   </div>
