edit headers, add sitemap.xml

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@ layout: default
       <a href="#front-statement" class="page-scroll fas fa-angle-double-down fa-2x hero-arrow"></a>
       </div>
       <div class="col-lg-6 col-md-6 col-sm-12">
-        <h2 class="hero-text">Take the first <br>step to a better
+        <h1 class="hero-text">Take the first <br>step to a better
           <br>
-          life.</h2>
+          life.</h1>
       </div>
     <div class="hero-overlay">
     </div>
@@ -21,9 +21,10 @@ layout: default
     <div class="row justify-content-center">
       <div class="col-12" id="front-statement">
         <div>
-          <p>
-          Welcome to Rottenberg Therapy! Our dedicated team of therapists is committed to providing you with empathic care. Learn more about how we can help you.
-          </p>
+
+            <h2>Welcome to Rottenberg Therapy! Our dedicated team of therapists is committed to providing you with empathic care. Learn more about how we can help you.</h2>
+
+        
           <br>
             <a href="{% link _pages/services.html %}">
             <button class="mdc-button mdc-button--raised"><span class="mdc-button__ripple"></span>Click Here</button>
