add zencare, optimize images index.html

--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -21,7 +21,10 @@ permalink: /contact/
       <h4 class="page-header-2">
         Listed On:
       </h4>
+       <div style="max-width: 250px; text-align: center; margin: auto; "> <a href="https://zencare.co" target="_blank"><img src="https://zencare.s3.us-east-2.amazonaws.com/badges/therapist_white.png" style="display: block; width: 100%; "></a> <a href="https://zencare.co/region/nyc" target="_blank"><img src="https://zencare.s3.us-east-2.amazonaws.com/badges/nyc/member_white.png" style="display: block; width: 100%; "></a> </div>
+       <br />
       <a href="http://www.mywellbeing.com"><img src="/assets/img/wellbeing.gif" alt="wellbeing"></a>
+
 
     </div>
 
