--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ layout: default
 
             <h2>Welcome to Rottenberg Therapy! Our dedicated team of therapists is committed to providing you with empathic care. Learn more about how we can help you.</h2>
 
-        
+
           <br>
             <a href="{% link _pages/services.html %}">
             <button class="mdc-button mdc-button--raised"><span class="mdc-button__ripple"></span>Click Here</button>
@@ -73,7 +73,10 @@ layout: default
             <button class="mdc-button mdc-button--raised">Schedule a Free Consultation</button>
           </a>
 
-          <p class="text-left contact">Listed On:</p>
+          <br>
+          <br>
+          <div style="max-width: 250px; text-align: center; margin: auto; "> <a href="https://zencare.co" target="_blank"><img src="https://zencare.s3.us-east-2.amazonaws.com/badges/therapist_white.png" style="display: block; width: 100%; "></a> <a href="https://zencare.co/region/nyc" target="_blank"><img src="https://zencare.s3.us-east-2.amazonaws.com/badges/nyc/member_white.png" style="display: block; width: 100%; "></a> </div>
+          <br>
           <a href="http://www.mywellbeing.com"><img src="/assets/img/wellbeing.gif" alt="wellbeing"></a>
         </div>
       </div>
