add credentials about.html, sary-rottenberg

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -20,8 +20,11 @@ permalink: /about/
          <div class="mdc-card__media mdc-card__media--square sary">
            <a class="media-link" href="{% link _pages/sary-rottenberg.html %}"><div class="mdc-card__media-content">
              <h2 class="my-card-title">Sary Rottenberg, LMHC</h2>
+
            </div></a>
+           <h4 class="my-card-title" id="sub-title">Owner/Founder</h4>
         </div>
+
         </div>
         <div class="card-body mdc-typography mdc-typography--body2">Specialties:<span class="specialties">
           <a href="{{site.url}}/specialties/#identity">Gender Variance</a>, <a href="{{site.url}}/specialties/#poc">People of Color</a>, <a href="{{site.url}}/specialties/#immigration">Acculturation and Immigration</a>, <a href="{{site.url}}/specialties/#religion">Cult/Rigid Religious Upbringing</a>, <a href="{{site.url}}/specialties/#illness">Chronic Illness/Pain</a>, <a href="{{site.url}}/specialties/#identity">LGBTQIA++</a>, <a href="{{site.url}}/specialties/#hebrew">Hebrew עברית</a>, <a href="{{site.url}}/specialties/#anxiety">Anxiety/Depression</a>, <a href="{{site.url}}/specialties/#career">Career</a>, <a href="{{site.url}}/specialties/#trauma">Trauma</a></span>
