--- a/_pages/sary-rottenberg.html
+++ b/_pages/sary-rottenberg.html
@@ -5,8 +5,10 @@ permalink: /sary-rottenberg/
 <div class="container-fluid card-container">
 <div class="row-fluid header">
   <div class="col-sm-12">
-    <h2 class="page-header">Sary Rottenberg, LMHC</h2>
-  </div></div>
+    <h2 class="page-header">Sary Rottenberg, LMHC<br/><span class="owner">Owner/Founder</span></h2>
+
+  </div>
+</div>
   <div class="row">
     <div class="col-lg-4 col-md-4 col-sm-12">
       <img src="/assets/img/Sary 8X10_website.jpg" alt="Sary Rottenberg" class="img-fluid headshot">
