--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -23,9 +23,11 @@ permalink: /contact/
       </h4>
        <div style="max-width: 250px; text-align: center; margin: auto; "> <a href="https://zencare.co" target="_blank"><img src="https://zencare.s3.us-east-2.amazonaws.com/badges/therapist_white.png" style="display: block; width: 100%; "></a> <a href="https://zencare.co/region/nyc" target="_blank"><img src="https://zencare.s3.us-east-2.amazonaws.com/badges/nyc/member_white.png" style="display: block; width: 100%; "></a> </div>
        <br />
-      <a href="http://www.mywellbeing.com"><img src="/assets/img/wellbeing.gif" alt="wellbeing"></a>
-
-
+       <div class="row justify-content-center">
+         <div  style="background-color:white; max-width: 325px">
+           <a href="http://www.mywellbeing.com"><img style="max-width:300px; border: solid white 3px" src="/assets/img/mywellbeing-logo-MWB.png" alt="wellbeing"></a>
+         </div>
+       </div>
     </div>
 
   </div>
