--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <header>
   <div class="row-fluid hero" id="page-top">
     <div>
-      <a href="#front-statement" class="page-scroll fas fa-angle-double-down fa-2x hero-arrow"></a>
+      <a href="#front-statement" class="page-scroll fas fa-arrow-circle-down fa-2x hero-arrow"></a>
       </div>
       <div class="col-lg-6 col-md-6 col-sm-12">
         <h1 class="hero-text">Take the first <br>step to a better
@@ -27,7 +27,7 @@ layout: default
 
           <br>
             <a href="{% link _pages/services.html %}">
-            <button class="mdc-button mdc-button--raised"><span class="mdc-button__ripple"></span>Click Here</button>
+            <button class="mdc-button mdc-button--raised"><span class="mdc-button__ripple"></span>Our Services</button>
             </a>
 
         </div>
@@ -77,7 +77,13 @@ layout: default
           <br>
           <div style="max-width: 250px; text-align: center; margin: auto; "> <a href="https://zencare.co" target="_blank"><img src="https://zencare.s3.us-east-2.amazonaws.com/badges/therapist_white.png" style="display: block; width: 100%; "></a> <a href="https://zencare.co/region/nyc" target="_blank"><img src="https://zencare.s3.us-east-2.amazonaws.com/badges/nyc/member_white.png" style="display: block; width: 100%; "></a> </div>
           <br>
-          <a href="http://www.mywellbeing.com"><img src="/assets/img/wellbeing.gif" alt="wellbeing"></a>
+          <div class="row justify-content-center">
+            <div  style="background-color:white; max-width: 325px">
+              <a href="http://www.mywellbeing.com"><img style="max-width:300px; border: solid white 3px" src="/assets/img/mywellbeing-logo-MWB.png" alt="wellbeing"></a>
+            </div>
+          </div>
+
+
         </div>
       </div>
   </div>
