add credit, fix contact form display, add arrows

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <header>
   <div class="row-fluid hero" id="page-top">
     <div>
-      <a href="#front-statement" class="page-scroll fas fa-arrow-circle-down fa-2x hero-arrow"></a>
+      <a href="#section-one" class="page-scroll fas fa-arrow-circle-down fa-2x hero-arrow"></a>
       </div>
       <div class="col-lg-6 col-md-6 col-sm-12">
         <h1 class="hero-text">Take the first <br>step to a better
@@ -19,26 +19,26 @@ layout: default
 <!-- /End Hero Image Begin Front Statement -->
   <div class="container full-width-container">
     <div class="row justify-content-center">
-      <div class="col-12" id="front-statement">
+      <div class="col-12 front-statement" id="section-one">
         <div>
-
             <h2>Welcome to Rottenberg Therapy! Our dedicated team of therapists is committed to providing you with empathic care. Learn more about how we can help you.</h2>
-
-
           <br>
             <a href="{% link _pages/services.html %}">
             <button class="mdc-button mdc-button--raised"><span class="mdc-button__ripple"></span>Our Services</button>
             </a>
-
-        </div>
+            <br>
+            <a href="#section-two" class="page-scroll fas fa-arrow-circle-down fa-2x" id="section-two-arrow"></a>
+            <p class="our-team">
+            Our Team</p>
         </div>
       </div>
+    </div>
 
       <div class="row divider">
       </div>
 
       <div class="row justify-content-center">
-        <div class="col-12" id="front-statement">
+        <div class="col-12 front-statement" id="section-two">
           <p>
             Whether you are looking for support through difficult emotions, traumatic experiences, life  transitions, or would like to explore aspects of your identity, the clinicians at Rottenberg Therapy are here for you.
           </p>
@@ -55,7 +55,7 @@ layout: default
         </div>
         <div class="divider-2 col-lg-6 col-md-6 col-sm-12 text-center">
           <h2>Contact one of our professionals today:</h2><br/>
-          <div class="text-left contact">
+          <div class="contact">
             <p>
               <a href="{% link _pages/contact.html %}">
                 <i class="fas fa-envelope"></i>
