--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -2,7 +2,7 @@
 layout: default
 permalink: /contact/
 ---
-<div class="container contact">
+<div class="container">
 
   <div class="row justify-content-center map">
 
