move head into _includes, add unique title to pages

--- a/_pages/alana-devine-dunn.html
+++ b/_pages/alana-devine-dunn.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+title: Alana Devine-Dunn, MHC-LP
 permalink: /alana-devine-dunn/
 ---
 <div class="container-fluid">
@@ -32,7 +33,7 @@ permalink: /alana-devine-dunn/
     </p>
 <p>I look forward to meeting you and to our work together.
   <br/>
-<a href="{% link _pages/about.html %}"><span class="back"><i class="fas fa-arrow-left"></i></span></a></p>
+<a href="{% link _pages/meet-our-team.html %}"><span class="back"><i class="fas fa-arrow-left"></i></span></a></p>
 </div>
   </div>
   </div>
