--- a/_pages/kate-blemler.html
+++ b/_pages/kate-blemler.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+title: Kate Blemler, MHC-LP
 permalink: /kate-blemler/
 ---
 <div class="container-fluid card-container">
@@ -30,7 +31,7 @@ permalink: /kate-blemler/
     <p>
     I primarily work with young adults struggling with depression, anxiety, trauma, sexuality, and identity, and I work with many folks who identify as LGBTQAI. In addition to seeing individuals, I work with couples and families regarding adjustment issues and interpersonal conflicts, including relational difficulties and parenting concerns. I also offer group therapy services, which will typically meet weekly on Saturdays.
     <br/>
-  <a href="{% link _pages/about.html %}"><span class="back"><i class="fas fa-arrow-left"></i></span></a>
+  <a href="{% link _pages/meet-our-team.html %}"><span class="back"><i class="fas fa-arrow-left"></i></span></a>
     </p>
 
     </div>
