--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ layout: default
             Whether you are looking for support through difficult emotions, traumatic experiences, life  transitions, or would like to explore aspects of your identity, the clinicians at Rottenberg Therapy are here for you.
           </p>
           <br>
-          <a href="{% link _pages/about.html %}">
+          <a href="{% link _pages/meet-our-team.html %}">
             <button class="mdc-button mdc-button--raised"><span class="mdc-button__ripple"></span>Meet Our Team</button>
           </a>
         </div>
