--- a/_pages/sary-rottenberg.html
+++ b/_pages/sary-rottenberg.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+title: Sary Rottenberg, LMHC
 permalink: /sary-rottenberg/
 ---
 <div class="container-fluid card-container">
@@ -24,7 +25,7 @@ permalink: /sary-rottenberg/
         <p>
         Some of the people I work with struggle with anxiety and depression, issues in careers, people with histories of trauma, people who identify as gender nonconforming, people with chronic illness and people who come from cults or a rigid religious upbrining. I also welcome people of color into my practice and am committed to an anti antiracist stance as a white therapist.
         </p><p>I continue to address patriarchy within myself to be a more conscious therapist to you. In addition to English I conduct therapy in Hebrew. See Hebrew description attached.  As such, I work with people who deal with acculturation, immgitration and multicultural identities and welcome people from around the world to be listened to with an aware ear.<br/>
-      <a href="{% link _pages/about.html %}"><span id="back"><i class="fas fa-arrow-left"></i></span></a>
+      <a href="{% link _pages/meet-our-team.html %}"><span id="back"><i class="fas fa-arrow-left"></i></span></a>
       </p>
     </div>
   </div>
