update header tags in pages, change title meet-our-team

--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+title: Contact Us
 permalink: /contact/
 ---
 <div class="container">
@@ -7,20 +8,20 @@ permalink: /contact/
   <div class="row justify-content-center map">
 
     <div class="col-lg-6 col-md-6 col-sm-12">
-      <h3 class="page-header-2">
+      <h1 class="page-header-2">
         Schedule a Free Consultation
-      </h3>
+      </h1>
     {% include form.html %}
     </div>
 
     <div class="col-lg-6 col-md-6 col-sm-12">
-      <h3 class="page-header-2">
+      <h2 class="page-header-2">
         Our Location
-      </h3>
+      </h2>
       <iframe class="mw-250" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJM7QM169ZwokR_40cJDZaujk&key=AIzaSyC_qKIJdHDv_xY19WxvOJ4cORwC74kbRKM" allowfullscreen></iframe>
-      <h4 class="page-header-2">
+      <h3 class="page-header-2">
         Listed On:
-      </h4>
+      </h3>
        <div style="max-width: 250px; text-align: center; margin: auto; "> <a href="https://zencare.co" target="_blank"><img src="https://zencare.s3.us-east-2.amazonaws.com/badges/therapist_white.png" style="display: block; width: 100%; "></a> <a href="https://zencare.co/region/nyc" target="_blank"><img src="https://zencare.s3.us-east-2.amazonaws.com/badges/nyc/member_white.png" style="display: block; width: 100%; "></a> </div>
        <br />
        <div class="row justify-content-center">
