--- a/_pages/meet-our-team.html
+++ b/_pages/meet-our-team.html
@@ -1,14 +1,14 @@
 ---
 layout: default
 title: Meet Our Team
-permalink: /about/
+permalink: /meet-our-team/
 ---
 <!-- Page Content -->
 
 <div class="container" id="about">
 <div class="row-fluid header">
   <div class="col-sm-12">
-    <h1 class="page-header">Who We Are</h1>
+    <h1 class="page-header">Meet Our Team</h1>
   </div>
 </div>
 </div>
@@ -23,7 +23,7 @@ permalink: /about/
              <h2 class="my-card-title">Sary Rottenberg, LMHC</h2>
 
            </div></a>
-           <h4 class="my-card-title" id="sub-title">Owner/Founder</h4>
+           <h3 class="my-card-title" id="sub-title">Owner/Founder</h3>
         </div>
 
         </div>
