add individual description for each page for meta, add favicon

--- a/_pages/sary-rottenberg.html
+++ b/_pages/sary-rottenberg.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 title: Sary Rottenberg, LMHC
+description: >-
+  About Sary,the Owner/Founder of Rottenberg Therapy in NYC.
 permalink: /sary-rottenberg/
 ---
 <div class="container-fluid card-container">
