--- a/_pages/services.html
+++ b/_pages/services.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 title: Our Services
+description: >-
+  Therapeutic services offered for individuals and families, as well as relationship and group counseling.
 permalink: /services/
 ---
 <div class="container">
