--- a/_pages/specialties.html
+++ b/_pages/specialties.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 title: Our Specialties
+description: >-
+  Specialties include LGBTQIA++ and identity, anxiety, depression, trauma, career choices and transitions, grief and more. Also avaliable in Hebrew.
 permalink: /specialties/
 ---
 <div class="container">
