--- a/_pages/supervision.html
+++ b/_pages/supervision.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 title: Supervision
+description: >-
+  Supportive supervision offered to therapists by Sary Rottenberg, LMHC.
 permalink: /supervision/
 ---
 
