--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 title: Contact Us
+description: >-
+  Contact Rottenberg Therapy, located at 245 W 29th St. New York, NY 10001.
 permalink: /contact/
 ---
 <div class="container">
