--- a/_pages/meet-our-team.html
+++ b/_pages/meet-our-team.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 title: Meet Our Team
+description: >-
+  Meet our team of qualified individuals. Owner/Founder Sary Rottenberg, LMHC; Alan Devine-Dunn, MHC-LP and Kate Blemler, MHC-LP.
 permalink: /meet-our-team/
 ---
 <!-- Page Content -->
@@ -42,6 +44,28 @@ permalink: /meet-our-team/
 
     <div class="mdc-card col-sm-12 col-md-4 col-lg-2 team">
        <div class="mdc-card__primary-action mdc-ripple-surface my-ripple" tabindex="0">
+         <div class="mdc-card__media mdc-card__media--square alana">
+           <a class="media-link" href="{% link _pages/alana-devine-dunn.html %}"><div class="mdc-card__media-content">
+             <h2 class="my-card-title">Alana Devine-Dunn, MHC-LP</h2>
+           </div></a>
+        </div>
+        </div>
+<div class="card-body mdc-typography mdc-typography--body2">Specialties: <span class="specialties"><a href="{{site.url}}/specialties/#postpartum">Prenatal/Postpartum Mental Health</a>, <a href="{{site.url}}/specialties/#infertility">Infertility</a>, <a href="{{site.url}}/specialties/#premenstrual">Premenstrual Dysphoric Disorder</a>, Young Adults,  <a href="{{site.url}}/specialties/#anxiety">Anxiety/Depression</a>, <a href="{{site.url}}/specialties/#trauma">Trauma</a>, <a href="{{site.url}}/specialties/#grief">Loss/Mourning/Grief</a>, <a href="{{site.url}}/specialties/#illness">Chronic Illness and Caregivers</a>, Group Therapy, Young Adults, <a href="{{site.url}}/specialties/#identity">LGBTQIA++</a></span>
+    </div>
+          <div class="card-body mdc-typography mdc-typography--body2 text-left">Welcome! I respect the courage that it takes to enter into therapy, as well as the feelings of accomplishment and vulnerability that can arise. Our work will be non-judgmental, active and collaborative. In our sessions, we will work to pinpoint goals, to name, understand, accept, and weather the emotions you experience, to recognize those values that are most meaningful to you, to identify and implement adaptive ways of addressing concerns, achieving goals, and navigating life transitions, and to understand the influence of past experience on present ways of thinking and relating to others.
+        </div>
+
+          <div class="mdc-card__actions">
+            <div class="mdc-card__action-buttons">
+              <a href="{% link _pages/alana-devine-dunn.html %}">
+                  <button id="learn-more" class="my-button mdc-button mdc-card__action mdc-card__action--button">Learn More</button></a><a href="mailto:alana@rottenbergtherapy.com?subject=Schedule%20Appointment:%20Mail%20From%20rottenbergtherapy.com"><button id="learn-more" class="my-ripple-button mdc-button mdc-card__action mdc-card__action--button">Schedule</button></a>
+
+            </div>
+          </div>
+    </div>
+
+    <div class="mdc-card col-sm-12 col-md-4 col-lg-2 team">
+       <div class="mdc-card__primary-action mdc-ripple-surface my-ripple" tabindex="0">
          <div class="mdc-card__media mdc-card__media--square kate">
            <a class="media-link" href="{% link _pages/kate-blemler.html %}"><div class="mdc-card__media-content">
              <h2 class="my-card-title">Kate Blemler, MHC-LP</h2>
@@ -63,27 +87,6 @@ permalink: /meet-our-team/
           </div>
     </div>
 
-    <div class="mdc-card col-sm-12 col-md-4 col-lg-2 team">
-       <div class="mdc-card__primary-action mdc-ripple-surface my-ripple" tabindex="0">
-         <div class="mdc-card__media mdc-card__media--square alana">
-           <a class="media-link" href="{% link _pages/alana-devine-dunn.html %}"><div class="mdc-card__media-content">
-             <h2 class="my-card-title">Alana Devine-Dunn, MHC-LP</h2>
-           </div></a>
-        </div>
-        </div>
-<div class="card-body mdc-typography mdc-typography--body2">Specialties: <span class="specialties"><a href="{{site.url}}/specialties/#postpartum">Prenatal/Postpartum Mental Health</a>, <a href="{{site.url}}/specialties/#infertility">Infertility</a>, <a href="{{site.url}}/specialties/#premenstrual">Premenstrual Dysphoric Disorder</a>, Young Adults,  <a href="{{site.url}}/specialties/#anxiety">Anxiety/Depression</a>, <a href="{{site.url}}/specialties/#trauma">Trauma</a>, <a href="{{site.url}}/specialties/#grief">Loss/Mourning/Grief</a>, <a href="{{site.url}}/specialties/#illness">Chronic Illness and Caregivers</a>, Group Therapy, Young Adults, <a href="{{site.url}}/specialties/#identity">LGBTQIA++</a></span>
-    </div>
-          <div class="card-body mdc-typography mdc-typography--body2 text-left">Welcome! I respect the courage that it takes to enter into therapy, as well as the feelings of accomplishment and vulnerability that can arise. Our work will be non-judgmental, active and collaborative. In our sessions, we will work to pinpoint goals, to name, understand, accept, and weather the emotions you experience, to recognize those values that are most meaningful to you, to identify and implement adaptive ways of addressing concerns, achieving goals, and navigating life transitions, and to understand the influence of past experience on present ways of thinking and relating to others.
-        </div>
-
-          <div class="mdc-card__actions">
-            <div class="mdc-card__action-buttons">
-              <a href="{% link _pages/alana-devine-dunn.html %}">
-                  <button id="learn-more" class="my-button mdc-button mdc-card__action mdc-card__action--button">Learn More</button></a><a href="mailto:alana@rottenbergtherapy.com?subject=Schedule%20Appointment:%20Mail%20From%20rottenbergtherapy.com"><button id="learn-more" class="my-ripple-button mdc-button mdc-card__action mdc-card__action--button">Schedule</button></a>
-
-            </div>
-          </div>
-    </div>
 
   </div>
 </div>
