--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ description: >-
           <br>
           <div class="row justify-content-center">
             <div  style="background-color:white; max-width: 325px">
-              <a href="http://www.mywellbeing.com"><img alt="link to mywellbeing" style="max-width:300px; border: solid white 3px" src="/assets/img/mywellbeing.webp" alt="wellbeing"></a>
+              <a href="http://www.mywellbeing.com"><img alt="link to mywellbeing" style="max-width:300px; border: solid white 3px" src="/assets/img/mywellbeing-logo-MWB.png" alt="wellbeing"></a>
             </div>
           </div>
 
