add data yml, access data from config

--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -24,7 +24,7 @@ permalink: /contact/
       <h3 class="page-header-2">
         Listed On:
       </h3>
-       <div style="max-width: 250px; text-align: center; margin: auto; "> <a href="https://zencare.co" target="_blank"><img src="https://zencare.s3.us-east-2.amazonaws.com/badges/therapist_white.png" style="display: block; width: 100%; "></a> <a href="https://zencare.co/region/nyc" target="_blank"><img src="https://zencare.s3.us-east-2.amazonaws.com/badges/nyc/member_white.png" style="display: block; width: 100%; "></a> </div>
+       <div style="max-width: 250px; text-align: center; margin: auto; "> <a href="https://zencare.co" target="_blank" rel="noreferrer"><img src="https://zencare.s3.us-east-2.amazonaws.com/badges/therapist_white.png" style="display: block; width: 100%; "></a> <a href="https://zencare.co/region/nyc" target="_blank"><img src="https://zencare.s3.us-east-2.amazonaws.com/badges/nyc/member_white.png" style="display: block; width: 100%; "></a> </div>
        <br />
        <div class="row justify-content-center">
          <div  style="background-color:white; max-width: 325px">
