add content to _data, add google analytics

--- a/_pages/meet-our-team.html
+++ b/_pages/meet-our-team.html
@@ -8,6 +8,7 @@ permalink: /meet-our-team/
 <!-- Page Content -->
 
 <div class="container" id="about">
+
 <div class="row-fluid header">
   <div class="col-sm-12">
     <h1 class="page-header">Meet Our Team</h1>
@@ -22,7 +23,7 @@ permalink: /meet-our-team/
        <div class="mdc-card__primary-action mdc-ripple-surface my-ripple" tabindex="0">
          <div class="mdc-card__media mdc-card__media--square sary">
            <a class="media-link" href="{% link _pages/sary-rottenberg.html %}"><div class="mdc-card__media-content">
-             <h2 class="my-card-title">Sary Rottenberg, LMHC</h2>
+             <h2 class="my-card-title">{{site.data.employees.sary.name}}</h2>
 
            </div></a>
            <h3 class="my-card-title" id="sub-title">Owner/Founder</h3>
