--- a/_pages/meet-our-team.html
+++ b/_pages/meet-our-team.html
@@ -2,94 +2,22 @@
 layout: default
 title: Meet Our Team
 description: >-
-  Meet our team of qualified individuals. Owner/Founder Sary Rottenberg, LMHC; Alan Devine-Dunn, MHC-LP and Kate Blemler, MHC-LP.
+  Meet our team of qualified individuals. Owner/Founder Sary Rottenberg LMHC, Alan Devine-Dunn MHC-LP, Rene Gonzalez LMHC, Cassandra Robertson-Benjamin MHC-LP, Madison Liddle MHC-LP.
 permalink: /meet-our-team/
 ---
 <!-- Page Content -->
 
 <div class="container" id="about">
-
-<div class="row-fluid header">
-  <div class="col-sm-12">
-    <h1 class="page-header">Meet Our Team</h1>
+  <div class="row-fluid header">
+    <div class="col-sm-12">
+      <h1 class="page-header">Meet Our Team</h1>
+    </div>
   </div>
-</div>
 </div>
 
 <!-- Begin About Cards -->
 <div class="container full-width-container">
   <div class="row justify-content-center">
   {% include card.html %}
-    <!-- /cards row -->
   </div>
-  <!-- /page container -->
 </div>
-
-
-
-<!-- <div class="mdc-card col-sm-12 col-md-4 col-lg-2 team">
-  <div class="mdc-card__primary-action mdc-ripple-surface my-ripple" tabindex="0">
-    <div class="mdc-card__media mdc-card__media--square sary">
-      <a class="media-link" href="{% link _pages/sary-rottenberg.html %}">
-        <div class="mdc-card__media-content">
-          <h2 class="my-card-title">{{site.data.employees.sary.name}}</h2>
-        </div>
-     </a>
-       <h3 class="my-card-title" id="sub-title">Owner/Founder</h3>
-    </div>
-  </div>
-      <div class="card-body mdc-typography mdc-typography--body2">Specialties: <span class="specialties">
-        <a href="{{site.url}}/specialties/#identity"> Gender Variance</a>, <a href="{{site.url}}/specialties/#poc">People of Color</a>, <a href="{{site.url}}/specialties/#immigration">Acculturation and Immigration</a>, <a href="{{site.url}}/specialties/#religion">Cult/Rigid Religious Upbringing</a>, <a href="{{site.url}}/specialties/#illness">Chronic Illness/Pain</a>, <a href="{{site.url}}/specialties/#identity">LGBTQIA++</a>, <a href="{{site.url}}/specialties/#hebrew">Hebrew עברית</a>, <a href="{{site.url}}/specialties/#anxiety">Anxiety/Depression</a>, <a href="{{site.url}}/specialties/#career">Career</a>, <a href="{{site.url}}/specialties/#trauma">Trauma</a></span>
-      </div>
-        <div class="card-body mdc-typography mdc-typography--body2 text-left">When you choose to begin therapy, a match is important to growth and change. I am direct, warm and will help you confront some of the more challenging aspects of yourself. My goal is always to facilitate living the best life you can. <br/><br/> Keeping that in mind, therapy can be demanding at times, and requires a lot of patience with yourself and with the work. We will learn together how to communicate about what is happening in therapy beyond the words that are used.
-        </div>
-          <div class="mdc-card__actions">
-            <div class="mdc-card__action-buttons">
-              <a href="{% link _pages/sary-rottenberg.html %}"><button id="learn-more" class="my-ripple-button mdc-button mdc-card__action mdc-card__action--button">Learn More</button></a>
-              <a href="mailto:sary@rottenbergtherapy.com?subject=Schedule%20Appointment:%20Mail%20From%20rottenbergtherapy.com"><button id="learn-more" class="my-ripple-button mdc-button mdc-card__action mdc-card__action--button">Schedule</button></a>
-            </div>
-          </div>
-</div>
-
-<div class="mdc-card col-sm-12 col-md-4 col-lg-2 team">
-   <div class="mdc-card__primary-action mdc-ripple-surface my-ripple" tabindex="0">
-     <div class="mdc-card__media mdc-card__media--square alana">
-       <a class="media-link" href="{% link _pages/alana-devine-dunn.html %}"><div class="mdc-card__media-content">
-         <h2 class="my-card-title">Alana Devine-Dunn, MHC-LP</h2>
-       </div></a>
-    </div>
-    </div>
-      <div class="card-body mdc-typography mdc-typography--body2">Specialties: <span class="specialties"><a href="{{site.url}}/specialties/#postpartum">Prenatal/Postpartum Mental Health</a>, <a href="{{site.url}}/specialties/#infertility">Infertility</a>, <a href="{{site.url}}/specialties/#premenstrual">Premenstrual Dysphoric Disorder</a>, Young Adults,  <a href="{{site.url}}/specialties/#anxiety">Anxiety/Depression</a>, <a href="{{site.url}}/specialties/#trauma">Trauma</a>, <a href="{{site.url}}/specialties/#grief">Loss/Mourning/Grief</a>, <a href="{{site.url}}/specialties/#illness">Chronic Illness and Caregivers</a>, Group Therapy, Young Adults, <a href="{{site.url}}/specialties/#identity">LGBTQIA++</a></span>
-          </div>
-      <div class="card-body mdc-typography mdc-typography--body2 text-left">Welcome! I respect the courage that it takes to enter into therapy, as well as the feelings of accomplishment and vulnerability that can arise. Our work will be non-judgmental, active and collaborative. In our sessions, we will work to pinpoint goals, to name, understand, accept, and weather the emotions you experience, to recognize those values that are most meaningful to you, to identify and implement adaptive ways of addressing concerns, achieving goals, and navigating life transitions, and to understand the influence of past experience on present ways of thinking and relating to others.
-    </div>
-      <div class="mdc-card__actions">
-        <div class="mdc-card__action-buttons">
-          <a href="{% link _pages/alana-devine-dunn.html %}">
-              <button id="learn-more" class="my-button mdc-button mdc-card__action mdc-card__action--button">Learn More</button></a><a href="mailto:alana@rottenbergtherapy.com?subject=Schedule%20Appointment:%20Mail%20From%20rottenbergtherapy.com"><button id="learn-more" class="my-ripple-button mdc-button mdc-card__action mdc-card__action--button">Schedule</button></a>
-        </div>
-      </div>
-</div>
-
-<div class="mdc-card col-sm-12 col-md-4 col-lg-2 team">
-   <div class="mdc-card__primary-action mdc-ripple-surface my-ripple" tabindex="0">
-     <div class="mdc-card__media mdc-card__media--square kate">
-       <a class="media-link" href="{% link _pages/kate-blemler.html %}"><div class="mdc-card__media-content">
-         <h2 class="my-card-title">Kate Blemler, MHC-LP</h2>
-       </div></a>
-    </div>
-    </div>
-
-      <div class="card-body mdc-typography mdc-typography--body2">Specialties: <span class="specialties"> Polyamory,
-        <a href="{{site.url}}/specialties/#identity">LGBTQIA++</a>, Sexuality, Identity, <a href="{{site.url}}/specialties/#anxiety">Anxiety/Depression</a>, <a href="{{site.url}}/specialties/#parenting">Couples and Family</a>, <a href="{{site.url}}/specialties/#trauma">Trauma</a>, Group Therapy, Young Adults</span>
-        </div>
-      <div class="card-body mdc-typography mdc-typography--body2 text-left">My goal in working together will be to provide a safe space for us to explore recurring patterns and unconscious influences, such as unresolved traumas from our past, which can contribute to the difficulties we face in the present and become obstacles in living truly fulfilling lives. <br/><br/>In our work together, we will explore how these influences and patterns may result in unsatisfying relationships with ourselves and with others. We will also consider the environmental, societal, and interpersonal influences that impact our thoughts and actions.
-    </div>
-      <div class="mdc-card__actions">
-        <div class="mdc-card__action-buttons">
-          <a href="{% link _pages/kate-blemler.html %}">
-              <button id="learn-more" class="my-ripple-button mdc-button mdc-card__action mdc-card__action--button">Learn More</button></a>
-          <a href="mailto:kate@rottenbergtherapy.com?subject=Schedule%20Appointment:%20Mail%20From%20rottenbergtherapy.com"><button id="learn-more" class="my-ripple-button mdc-button mdc-card__action mdc-card__action--button">Schedule</button></a>
-        </div>
-      </div>
-</div> -->
