--- a/index.html
+++ b/index.html
@@ -60,15 +60,28 @@ description: >-
           <h2>Contact one of our professionals today:</h2><br/>
           <div class="contact">
             <p>
-              <a href="{% link _pages/contact.html %}">
+              <a href="mailto:{{site.data.employees.sary.email}}">
                 <i class="fas fa-envelope"></i>
-              </a>Sary Rottenberg, LMHC: <span class="phone">203-518-4177</span><br/>
-              <a href="{% link _pages/contact.html %}">
+              </a>{{site.data.employees.sary.name}}
+              <!-- <span class="phone">203-518-4177</span> -->
+              <br/>
+              <a href="mailto:{{site.data.employees.alana.email}}">
                 <i class="fas fa-envelope"></i>
-              </a>Kate Blemler, MHC-LP: <span class="phone">929-376-9839</span><br/>
-              <a href="{% link _pages/contact.html %}">
+              </a>{{site.data.employees.alana.name}}
+              <!-- <span class="phone">646-397-6235</span> -->
+              <br/>
+              <a href="mailto:{{site.data.employees.rene.email}}">
                 <i class="fas fa-envelope"></i>
-              </a>Alana Devine-Dunn, MHC-LP: <span class="phone">646-397-6235</span><br/>
+              </a>{{site.data.employees.rene.name}}
+              <br/>
+              <a href="mailto:{{site.data.employees.cassandra.email}}">
+                <i class="fas fa-envelope"></i>
+              </a>{{site.data.employees.cassandra.name}}
+              <br/>
+              <a href="mailto:{{site.data.employees.madison.email}}">
+                <i class="fas fa-envelope"></i>
+              </a>{{site.data.employees.madison.name}}
+              <br/>
           </p>
           </div>
 
